# LearningECS

./: .gitignore  CMakeLists.txt  LICENSE.md  LearningECS.sln  LearningECS.vcxproj  README.md
analysis/: analysis.py
analysis/analysis_ecs/: ECSEditor_fps_results_0.json  ECSEditor_fps_results_1.json  ECSEditor_fps_results_10.json  ECSEditor_fps_results_12.json  ECSEditor_fps_results_13.json  ECSEditor_fps_results_14.json  ECSEditor_fps_results_15.json  ECSEditor_fps_results_16.json  ECSEditor_fps_results_17.json  ECSEditor_fps_results_18.json  ECSEditor_fps_results_19.json  ECSEditor_fps_results_2.json  ECSEditor_fps_results_20.json  ECSEditor_fps_results_21.json  ECSEditor_fps_results_22.json  ECSEditor_fps_results_23.json  ECSEditor_fps_results_24.json  ECSEditor_fps_results_25.json  ECSEditor_fps_results_26.json  ECSEditor_fps_results_27.json  ECSEditor_fps_results_28.json  ECSEditor_fps_results_3.json  ECSEditor_fps_results_30.json  ECSEditor_fps_results_31.json  ECSEditor_fps_results_32.json  ECSEditor_fps_results_33.json  ECSEditor_fps_results_34.json  ECSEditor_fps_results_35.json  ECSEditor_fps_results_36.json  ECSEditor_fps_results_37.json  ECSEditor_fps_results_38.json  ECSEditor_fps_results_39.json  ECSEditor_fps_results_4.json  ECSEditor_fps_results_40.json  ECSEditor_fps_results_41.json  ECSEditor_fps_results_42.json  ECSEditor_fps_results_44.json  ECSEditor_fps_results_45.json  ECSEditor_fps_results_46.json  ECSEditor_fps_results_47.json  (+6 more)
analysis/analysis_oc/: ObjectComponentEditor_fps_results_0.json  ObjectComponentEditor_fps_results_1.json  ObjectComponentEditor_fps_results_10.json  ObjectComponentEditor_fps_results_11.json  ObjectComponentEditor_fps_results_12.json  ObjectComponentEditor_fps_results_13.json  ObjectComponentEditor_fps_results_14.json  ObjectComponentEditor_fps_results_15.json  ObjectComponentEditor_fps_results_16.json  ObjectComponentEditor_fps_results_17.json  ObjectComponentEditor_fps_results_18.json  ObjectComponentEditor_fps_results_19.json  ObjectComponentEditor_fps_results_2.json  ObjectComponentEditor_fps_results_20.json  ObjectComponentEditor_fps_results_21.json  ObjectComponentEditor_fps_results_22.json  ObjectComponentEditor_fps_results_23.json  ObjectComponentEditor_fps_results_24.json  ObjectComponentEditor_fps_results_25.json  ObjectComponentEditor_fps_results_26.json  ObjectComponentEditor_fps_results_27.json  ObjectComponentEditor_fps_results_28.json  ObjectComponentEditor_fps_results_3.json  ObjectComponentEditor_fps_results_30.json  ObjectComponentEditor_fps_results_32.json  ObjectComponentEditor_fps_results_33.json  ObjectComponentEditor_fps_results_34.json  ObjectComponentEditor_fps_results_35.json  ObjectComponentEditor_fps_results_36.json  ObjectComponentEditor_fps_results_37.json  ObjectComponentEditor_fps_results_38.json  ObjectComponentEditor_fps_results_39.json  ObjectComponentEditor_fps_results_4.json  ObjectComponentEditor_fps_results_40.json  ObjectComponentEditor_fps_results_41.json  ObjectComponentEditor_fps_results_42.json  ObjectComponentEditor_fps_results_44.json  ObjectComponentEditor_fps_results_45.json  ObjectComponentEditor_fps_results_46.json  ObjectComponentEditor_fps_results_47.json  (+6 more)
assets/shaders/: basic.frag  basic.vert
src/: BaseEditor.cpp  BaseEditor.h  BaseScene.h  Editor.cpp  Editor.h  Event.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  Input.cpp  Input.h  Instrumentalization.cpp  Instrumentalization.h  Log.h  Random.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  const.h  glad.c  main.cpp
src/ECS/: ComponentArray.h  ComponentsManager.cpp  ComponentsManager.h  ECS.h  EntitiesManager.cpp  EntitiesManager.h  Entity.h  Registry.cpp  Registry.h  System.h  SystemsManager.cpp  SystemsManager.h
src/ECSGame/: Scene.cpp  Scene.h
src/Editors/: ECSEditor.cpp  ECSEditor.h  ObjectComponentEditor.cpp  ObjectComponentEditor.h
(+54 files in other folders)
